--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Station - Order Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -299,9 +300,9 @@
                     </div>
                 </div>
 
-                <!-- Accompaniments Section -->
+                <!-- Extras Section -->
                 <div class="section">
-                    <h2>🍯 Accompaniments</h2>
+                    <h2>🍯 Extras</h2>
                     <div class="menu-grid" id="accompaniments-menu">
                         <!-- Accompaniment items will be populated from Firebase -->
                     </div>
@@ -317,7 +318,7 @@
                     
                     <form class="order-form" id="order-form">
                         <div class="form-group">
-                            <label for="customer-name">Your Name:</label>
+                            <label for="customer-name">Name:</label>
                             <input type="text" id="customer-name" required>
                         </div>
                         <div class="form-group">
