--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,10 @@
                 'steamed-milk': './images/steamed-milk.jpg',
                 'brown-sugar': './images/brown-sugar.jpg',
                 'fresh-ginger': './images/fresh-ginger.jpg',
-                'homemade-cookies': './images/homemade-cookies.jpg'
+                'homemade-cookies': './images/homemade-cookies.jpg',
+                
+                // Custom added items (using Firebase document IDs)
+                'Q65pIGjyXGC4XXRCJ3Wr': './images/white-sugar.jpg'  // Your new Sugar item
             };
 
             // Return the specific image path, or a default if not found
