--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Station - Order Menu</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Source+Sans+Pro:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,11 +13,22 @@
         }
 
         body {
-            font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Source Sans Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #e8dcc0;
             min-height: 100vh;
             padding: 15px;
             line-height: 1.6;
+        }
+
+        /* Headers use Merriweather */
+        h1, h2, h3, h4, h5, h6,
+        .header h1,
+        .header p,
+        .section h2,
+        .modal-title,
+        .item-name,
+        .customer-name {
+            font-family: 'Merriweather', Georgia, serif;
         }
 
         .container {
@@ -506,7 +517,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-family: inherit;
+            font-family: 'Source Sans Pro', sans-serif;
         }
 
         .modal-btn.cancel {
@@ -618,7 +629,7 @@
             border-radius: 10px;
             font-size: 1em;
             transition: border-color 0.3s ease;
-            font-family: inherit;
+            font-family: 'Source Sans Pro', sans-serif;
         }
 
         .form-group input:focus {
@@ -637,7 +648,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-family: inherit;
+            font-family: 'Source Sans Pro', sans-serif;
         }
 
         .submit-btn:hover {
