--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
     <div class="container">
         <div class="header">
             <h1>🍵 Tea Station</h1>
-            <p>Welcome to our cozy apartment tea corner!</p>
+            <p>Because real cafes are too expensive</p>
         </div>
 
         <div class="main-content">
