Change 'Featured' heading to 'Seasonal'

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                 <div id="menu-content">
                     <!-- Featured Section -->
                     <div class="featured-section" id="featured-section" style="display: none;">
-                        <h2>✨ Featured</h2>
+                        <h2>✨ Seasonal</h2>
                         <div class="featured-container">
                             <div class="featured-scroll" id="featured-scroll">
                                 <!-- Featured items will be populated here -->
